Added tests for MakeProfiles
Four initial tests for MakeProfiles were added and those for ImageCrop
were also corrected to use the outputs of the MakeProfiles
tests. Until now I was relying on external files for the ImageCrop
tests, but now the tests are self sufficient.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2015-01-20  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* tests/imgcrop/makerandomcat.py: Removed, because now the points
+	are very specific.
+
+	* tests/imgcrop/*.sh: Corrected the inputs to the outputs of
+	MakeProfiles tests.
+
+	* tests/Makefile.am (TESTS): Added tests for MakeProfiles.
+
+	* Makefile.am (EXTRA_DIST): Moved the distribution files for each
+	folder to the Makefile.am in that folder.
+
 2015-01-19  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* src/mkprof/ui.c: Steps for reading and checking WCS parameters
